test/corpus/05_multiple_values.txt
==================
Multiple values in declaration
==================

Box {
    border: solid blue;
    margin: 10 20;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (keyword)
        (keyword))
      (declaration
        (property_name)
        (numeric_value)
        (numeric_value)))))
