test/corpus/08_id_selector.txt
==================
ID selector
==================

#main-panel {
    width: 100%;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (id_selector
          (id_name))))
    (block
      (declaration
        (property_name)
        (numeric_value)))))
