test/corpus/09_pseudo_classes.txt
==================
Pseudo-classes
==================

Button:hover {
    background: blue;
}

Input:focus {
    border: solid green;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)
        (pseudo_class_selector
          (pseudo_class_name))))
    (block
      (declaration
        (property_name)
        (keyword))))
  (rule_set
    (selectors
      (selector
        (widget_selector)
        (pseudo_class_selector
          (pseudo_class_name))))
    (block
      (declaration
        (property_name)
        (keyword)
        (keyword)))))
