test/corpus/12_nesting_selector.txt
==================
Nesting selector
==================

Button {
    color: blue;
    
    &:hover {
        color: red;
    }
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (keyword))
      (rule_set
        (selectors
          (selector
            (nesting_selector)
            (pseudo_class_selector
              (pseudo_class_name))))
        (block
          (declaration
            (property_name)
            (keyword)))))))
