test/corpus/14_comments.txt
==================
Block and line comments
==================

/* Block comment */
# Line comment

Screen {
    background: blue;
}

---

(stylesheet
  (comment_block)
  (comment_line)
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (keyword)))))
