test/corpus/16_hsl_functions.txt
==================
HSL functions
==================

Panel {
    background: hsl(120, 100%, 50%);
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (function_call
          (keyword)
          (numeric_value)
          (numeric_value)
          (numeric_value))))))
