test/corpus/17_ansi_colors.txt
==================
ANSI colors
==================

Terminal {
    color: ansi_green;
    background: ansi_black;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (keyword))
      (declaration
        (property_name)
        (keyword)))))
