test/corpus/test/corpus/01_simple_rule.txt
==================
Simple rule with single property
==================

Button {
    color: blue;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (keyword)))))
