test/corpus/test/corpus/02_multiple_properties.txt
==================
Multiple properties
==================

Screen {
    background: red;
    color: white;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (keyword))
      (declaration
        (property_name)
        (keyword)))))
