test/corpus/test/corpus/03_numeric_values.txt
==================
Numeric values with units
==================

Container {
    width: 100%;
    height: 50vh;
    padding: 10;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (numeric_value))
      (declaration
        (property_name)
        (numeric_value))
      (declaration
        (property_name)
        (numeric_value)))))
