test/corpus/test/corpus/04_hex_colors.txt
==================
Hex color values
==================

Panel {
    background: #1e1e2e;
    color: #ffffff;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (color_value))
      (declaration
        (property_name)
        (color_value)))))
