test/corpus/test/corpus/07_class_selectors.txt
==================
Class selectors
==================

.error {
    color: red;
}

.warning {
    color: yellow;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (class_selector
          (class_name))))
    (block
      (declaration
        (property_name)
        (keyword))))
  (rule_set
    (selectors
      (selector
        (class_selector
          (class_name))))
    (block
      (declaration
        (property_name)
        (keyword)))))
