test/corpus/test/corpus/09_pseudo_classes.txt
==================
Pseudo-classes
==================

Button:hover {
    background: blue;
}

Input:focus {
    border: solid green;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)
        (pseudo_class_selector)))
    (block
      (declaration
        (property_name)
        (color_keyword))))
  (rule_set
    (selectors
      (selector
        (widget_selector)
        (pseudo_class_selector)))
    (block
      (declaration
        (property_name)
        (property_keyword)
        (color_keyword)))))
