test/corpus/test/corpus/10_wildcard_selector.txt
==================
Wildcard selector
==================

* {
    margin: 0;
    padding: 0;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (wildcard_selector)))
    (block
      (declaration
        (property_name)
        (numeric_value))
      (declaration
        (property_name)
        (numeric_value)))))
