test/corpus/test/corpus/11_combinator.txt
==================
Child combinator
==================

Container > Button {
    color: red;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)
        (combinator)
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (keyword)))))
