test/corpus/test/corpus/15_rgb_functions.txt
==================
RGB and RGBA functions
==================

Box {
    background: rgb(255, 0, 0);
    color: rgba(0, 0, 0, 0.5);
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (function_call
          (keyword)
          (numeric_value)
          (numeric_value)
          (numeric_value)))
      (declaration
        (property_name)
        (function_call
          (keyword)
          (numeric_value)
          (numeric_value)
          (numeric_value)
          (numeric_value))))))
