test/corpus/test/corpus/18_property_keywords.txt
==================
Property keywords
==================

Layout {
    display: block;
    align: center;
    text-style: bold;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (keyword))
      (declaration
        (property_name)
        (keyword))
      (declaration
        (property_name)
        (keyword)))))
