test/corpus/test/corpus/19_important.txt
==================
Important keyword
==================

Button {
    color: red !important;
}

---

(stylesheet
  (rule_set
    (selectors
      (selector
        (widget_selector)))
    (block
      (declaration
        (property_name)
        (color_keyword)
        (important)))))
