test/corpus/test/corpus/20_complex_combination.txt
==================
Complex combination
==================

$accent: #3498db;

Screen > .container {
    background: $accent;
    padding: 10 20;
}

Button:hover, Input:focus {
    border: solid 2 blue;
    color: white !important;
}

---

(stylesheet
  (variable_definition
    (variable)
    (color_value))
  (rule_set
    (selectors
      (selector
        (widget_selector)
        (combinator)
        (class_selector
          (class_name))))
    (block
      (declaration
        (property_name)
        (variable))
      (declaration
        (property_name)
        (numeric_value)
        (numeric_value))))
  (rule_set
    (selectors
      (selector
        (widget_selector)
        (pseudo_class_selector
          (pseudo_class_name)))
      (selector
        (widget_selector)
        (pseudo_class_selector
          (pseudo_class_name))))
    (block
      (declaration
        (property_name)
        (keyword)
        (numeric_value)
        (keyword))
      (declaration
        (property_name)
        (keyword)
        (important)))))
